2012-11-04  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_predict() to avoid returning negative variances. When
	negative variances are encountered, they are set to zero and a
	warning is issued.

	* core/stk_predict.m: modified

	Modified stk_sampling_regulargrid() to return 'ndgrid-style'
	coordinate matrices stored in new .coord field.

	* sampling/stk_sampling_regulargrid.m: modified

	Improved Octave-specific configuration (GNUTERM=wxt).

	* misc/config/stk_octave_config.m: modified

2012-11-01  Julien Bect  <julien.bect@supelec.fr>

	Added a new folder for test functions.

	* examples/test_functions: new folder
	* examples/test_functions/stk_testfun_braninhoo.m: new function
	* misc/config/stk_path.m: modified

2012-10-28  Julien Bect  <julien.bect@supelec.fr>

	Improved Octave-specific configuration.

	* stk_init.m: modified
	* misc/config/stk_octave_config.m: new function
	* misc/config/stk_check_octave_packages.m: removed
	* README: modified

2012-10-24  Julien Bect  <julien.bect@supelec.fr>

	Added a new example to demonstrate the effect of adding a prior on
	the covariance parameters.

	* examples/03_miscellaneous/stk_example_misc03.m: new script

	Added a new function to draw shaded area representing pointwise
	confidence intervals.

	* misc/plot/stk_plot_shadedci.m: new function
	* misc/plot/stk_plot1d.m: modified

	Added size checking and changed the upper bound for nu in
	stk_param_estim.

	* paramestim/stk_param_estim.m: modified

	Renamed "box" into "BOX" in all example scripts, to
	avoid conflicts with the box function.

	* 01_kriging_basics/stk_example_kb01.m: modified
	* 01_kriging_basics/stk_example_kb02.m: modified
	* 01_kriging_basics/stk_example_kb04.m: modified
	* 01_kriging_basics/stk_example_kb05.m: modified
	* 03_miscellaneous/stk_example_misc01.m: modified

2012-10-22  Julien Bect  <julien.bect@supelec.fr>

	Improving welcome messages.

	* misc/disp: new folder
	* misc/disp/stk_disp_framedtext.m: new function