@@ -1,5 +1,11 @@
 2012-11-04  Julien Bect  <julien.bect@supelec.fr>
 
+	Added a new function stk_plot2d() that serves has a wrapper around
+	{surf|contour|mesh|pcolor}-type functions, to plot data defined
+	over a two-dimensional regular grid.
+
+	* misc/plot/stk_plot2d.m: new function
+
 	Modified stk_predict() to avoid returning negative variances. When
 	negative variances are encountered, they are set to zero and a
 	warning is issued.
